Enabled cosmos db syncing.
